<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sweets</string>

    <string name="btn_instagram">btnInstagram</string>
    <string name="btn_twitter">btnTwitter</string>
    <string name="btn_facebook">btnFacebook</string>
    <string name="app_logo">appLogo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="tagline">Treat yourself to sweets</string>
    <string name="copyright"> &#169; Template by Sonia</string>
    <string name="copyright2"> &#169; </string>
    <string name="signup">Please fill up the form with valid information.</string>
    <string name="signIn">Please enter your login details.</string>
    <!--    <string name="searchArea">Let\'s try \nsome tasty desserts</string>-->
    <string name="searchArea">Let\'s try some tasty desserts</string>
    <string name="create_an_account">Create an account</string>
    <string name="btn_dribble">dribble</string>
    <string name="menu">menu</string>
    <string name="profile">profile</string>
    <string name="search">search here…</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="category_name">Category Name</string>
    <string name="categories">Categories</string>
    <string name="category_image">category image</string>
    <string name="product_price">৳ 100.00</string>
    <string name="food_name">Food Name</string>
    <string name="with_extras">with extras</string>
    <string name="popular_food_image">popular food image</string>
    <string name="favourite_food">favourite food</string>
    <string name="favourites">favourites</string>
    <string name="food_rating">4.5</string>
    <string name="order_now">Order Now</string>
    <string name="view_all">View All</string>
    <string name="populars">Populars</string>
    <string name="cart">Cart</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="email_hint">email@email.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_hint">01000000000</string>
    <string name="password_hint_PA">*********</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_mass"><b>300 g</b> / 530 Kcal</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="estimated_delivery_with_time">Estimated delivery \n<b>20 min</b></string>
    <string name="apply_voucher">Apply a voucher</string>
    <string name="no_cutlery">We won\'t bring cutlery. Thanks for helping us reduce waste.</string>
    <string name="yes_cutlery">We will provide cutlery, if available.</string>
    <string name="subtotal">Subtotal</string>
    <string name="subtotal_amount">$ 200</string>
    <string name="discount">Discount</string>
    <string name="discount_amount">$ 2</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="delivery_fee_amount">$ 0</string>
    <string name="cutlery">Cutlery</string>
    <string name="total">Total</string>
    <string name="incl_vat"> (incl. VAT)</string>
    <string name="total_amount">$ 220</string>
    <string name="review_payment_and_address">Review payment and address</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="vouchers">Vouchers</string>
    <string name="my_addresses">My Addresses</string>
    <string name="logout">Logout</string>
    <string name="my_favourites">My Favourites</string>
    <string name="open">Drawer Open</string>
    <string name="close">Drawer Close</string>
    <string name="delivery_image">delivery_image</string>
    <string name="product_image">Product Image</string>
</resources>