<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/sweet" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:fontFamily="@font/country_western"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textColor="@color/colorMain"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tagline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/main_screen_button_bg"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorMain"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main_screen_button_bg"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorMain"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorMain"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_dribble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/btn_dribble"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/dribble"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btn_instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/btn_instagram"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/instagram"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/btn_facebook"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/facebook"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btn_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/btn_twitter"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/twitter"
            app:tint="@color/white" />
    </LinearLayout>

</RelativeLayout>