<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/colorOffWhite"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <ImageView
            android:id="@+id/iv_popular_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/popular_food_image"
            android:src="@drawable/user_profile_image" />

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/iv_popular_image">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_food_name_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="1"
                android:text="@string/food_name"
                android:textColor="@color/logoColor"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_food_extra_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_food_name_popular"
                android:fontFamily="@font/roboto_light"
                android:maxLines="1"
                android:text="@string/with_extras"
                android:textColor="@color/logoColor"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_food_price_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/product_price"
                android:textColor="@color/logoColor"
                android:textSize="14sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/btn_favourite_food"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/transparent"
                android:clickable="true"
                android:contentDescription="@string/favourite_food"
                android:focusable="true"
                android:src="@drawable/favourite_empty_2" />
<!--                android:src="@drawable/favourite_empty" />-->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rating_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/iv_star"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                android:text="@string/food_rating" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/food_rating"
                android:src="@drawable/star_filled"
                app:tint="@color/yellow" />

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>