<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_common"
    tools:context=".activity.HomeActivity">

    <RelativeLayout
        android:id="@+id/relative_top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@color/transparent"
            android:contentDescription="@string/menu"
            android:src="@drawable/menu"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/transparent"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile"
            app:tint="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_top_buttons"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_search_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/searchArea"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/main_screen_button_bg"
            android:iconifiedByDefault="false"
            android:queryBackground="@color/transparent"
            android:queryHint="@string/search"
            android:searchIcon="@drawable/search" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>


</RelativeLayout>