<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/curved_bg"
    android:orientation="vertical"
    android:padding="5dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="3dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/iv_product_image_category_food"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            android:src="@drawable/sweet" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_product_name_category_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/food_name"
        android:textColor="@color/colorMain"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_product_price_category_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/product_price"
            android:textColor="@color/colorMain"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/delivery_image"
                android:src="@drawable/delivery"
                app:tint="@color/colorMain" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_delivery_charge_category_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_light"
                android:text="Free"
                android:textColor="@color/colorMain"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>